@@ -19,6 +19,7 @@ import tag
 import signal
 import interface_draw
 import traceback
+import time
 
 class ConfigError(Exception):
     def __str__(self):
@@ -93,6 +94,27 @@ class Cfg:
         self.columns = 1
         self.height = 0
         self.width = 0
+
+        try :
+            os.stat(self.path)
+        except :
+            print "Unable to find config file. Generating and using conf.example"
+            print "You will keep getting this until you create your own ~/.canto/conf"
+            print "Remember: it's 'h' for help.\n"
+            print "Sleeping for 5 seconds.\n"
+            time.sleep(5) 
+
+            self.path += ".example"
+            f = codecs.open(self.path, "w", "UTF-8")
+            f.write("# Auto-generated by canto because you don't have one.\n# Please copy to/create ~/.canto/conf\n\n")
+            f.write("""columns = width / 70\n""")
+            f.write("""addfeed("Slashdot", "http://rss.slashdot.org/slashdot/Slashdot")\n""")
+            f.write("""addfeed("Reddit", "http://reddit.com/.rss")\n""")
+            f.write("""addfeed("KernelTrap", "http://kerneltrap.org/node/feed")\n""")
+            f.write("""addfeed("Canto", "http://codezen.org/canto/feeds/latest")\n""")
+            f.write("\n")
+            f.close()
+            update_first = 1
 
         # We have to do this here, otherwise it won't
         # appear until after canto  is closed.
@@ -288,11 +310,6 @@ class Cfg:
         """Parse the configuration, which exports a number of variables
         to the config which is executable code."""
 
-        try :
-            os.stat(self.path)
-        except :
-            print "Unable to find config file. Read `man canto` for an example config."
-            raise ConfigError
 
         locals = {"addfeed":self.feedwrap,
             "height" : self.height,
