@@ -8,6 +8,7 @@ Canto 0.4.4 ChangeLog
 * Added set_collapse_all unset_collapse_all keybinds, eliminate toggle.
 * Added title_key option to addfeed with default
 * Make canto -u verbose
+* Create and use a conf.example if no conf file found.
 * Stop kludging paths with sed, start relying on os.system()
 * Start forcing an update if all feeds are empty (first start?)
 * Fix canto -D
